dev/styles/partials/_contact.scss
.contact-section {
    padding: 50px 0;
}

.contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .title {
        font-family: $bodyFont;
        font-style: italic;
        text-align: right;
        color: $mediumgrey;
        padding-bottom: 5px;
    }
    h2 {
        font-size: 3.6rem;
        font-weight: 700;
        line-height: 50px;
        text-transform: uppercase;
        text-align: left;
        margin: 5px 0 10px 0;
        &:before {
            content: "";
            width: 180px;
            display: block;
            height: 3px;
            background-color: $darkgrey;
            margin-bottom: 20px;
        }
    }
    p {
        color: $mediumgrey;
        font-weight: 400;
        line-height: 28px;
        padding: 10px 0 50px 0;
        @include respond-to('medium') {
            padding: 20px 50px;
            text-align: center;
        }

        a {
            font-family: $bodyFont;
            color: $mediumgrey;
            transition: all 0.3s;
            &:hover {
                color: $accentColour;
            }
        }
    }
}

form {
    display: flex;
    flex-wrap: wrap;

    .user-contact,
    .user-form {
        display: flex;
        flex-direction: column;
        width: calc(50% - 40px);
        margin: 80px 20px;
        @include respond-to('medium') {
            width: 100%;
            align-items: center;
        }

        input:not([type='submit']) {
            border: none;
            border-bottom: 2px solid $lightgrey;
            outline: none;
            padding: 21px 0;
            width: 800px;
            color: $mediumgrey;
            @include respond-to('large') {
                width: 350px;
            }
            @include respond-to('medium') {
                width: 500px;
            }
            @include respond-to('small') {
                width: 350px;
            }
            &:focus {
                border-bottom: 2px solid $darkgrey;
            }
        }
    }
}

.user-form {
    textarea {
        border: none;
        border-bottom: 2px solid $lightgrey;
        font-family: $bodyFont;
        outline: none;
        color: $mediumgrey;
        @include respond-to('medium') {
            width: 70%;
        }
        @include respond-to('small') {
            width: 100%;
        }

        &:focus {
            border-bottom: 2px solid $darkgrey;
        }
    }
}

.submit-btn {
    margin-left: 20px;
    transition: all, 0.5s;
    &:hover {
        color: $accentColour;
    }
    @include respond-to('medium') {
        margin: 0 auto;
    }
    input[type='submit'] {
        font-family: $headerFont;
        background-color: transparent;
        -webkit-appearance: none;
        -webkit-border-radius: 0;
        text-transform: uppercase;
        font-weight: 400;
        font-size: 0.8rem;
        border: none;
        border-top: 2px solid $darkgrey;
        border-bottom: 2px solid $darkgrey;
        padding: 10px 0;
        transition: all, 0.5s;
        &:hover {
            color: $accentColour;
            border-top: 2px solid $accentColour;
            border-bottom: 2px solid $accentColour;
        }
    }
}

.backToTop {
    padding-top: 100px;
    i {
        display: block;
        text-align: center;
        font-size: 20px;
        padding-bottom: 10px;
        transition: all, 0.5s;
        &:hover {
            transform: scale(1.5);
        }
    }
    span {
        text-transform: uppercase;
        font-size: 0.8rem;
    }
}

